@@ -20,12 +20,13 @@
 #ifndef CONVERT_SQL2STRING_h
 #define CONVERT_SQL2STRING_h
 
-static char rcsid_convert_sql2string_h[] = "$Id: convert_sql2string.h,v 1.4 2002/11/08 16:08:42 freddy77 Exp $";
+static char rcsid_convert_sql2string_h[] = "$Id: convert_sql2string.h,v 1.5 2002/11/29 22:11:04 freddy77 Exp $";
 static void *no_unused_convert_sql2string_h_warn[] = { rcsid_convert_sql2string_h, no_unused_convert_sql2string_h_warn };
 
 
 
 TDS_INT convert_sql2string(TDSCONTEXT * context, int srctype, const TDS_CHAR * src, TDS_INT srclen, TDS_CHAR * dest,
 			   TDS_INT destlen, int param_lenbind);
+int _odbc_get_server_type(int c_type);
 
 #endif
